Renamed service_status/smart.css intro comment

--- a/molly/apps/service_status/static/service_status/css/smart.css
+++ b/molly/apps/service_status/static/service_status/css/smart.css
@@ -1,6 +1,4 @@
-
-
-/* OUCS Status */
+/* Service Status */
 ul.service-status-list li.service-status-item {
     background: #121C28;
     color: #ffffff;
