--- a/molly/apps/search/templates/search/index.html
+++ b/molly/apps/search/templates/search/index.html
@@ -69,7 +69,7 @@
 	{% endif %}
 	{% if "library"|app_is_loaded %}
 	    <li><a href="{% url library:search %}?title={{ search_form.data.query }}">Library books titled with <em>'{{ search_form.data.query }}'</em></a></li>
-	    <li class="round-bottom"><a href="{% url library:search %}?author={{ search_form.data.query }}">Library books authored by <em>'{{ search_form.data.query }}'</em> </a></li>
+	    <li><a href="{% url library:search %}?author={{ search_form.data.query }}">Library books authored by <em>'{{ search_form.data.query }}'</em> </a></li>
 	{% endif %}
     </ul>
 </div>
