--- a/molly/apps/service_status/templates/service_status/index.html
+++ b/molly/apps/service_status/templates/service_status/index.html
@@ -25,7 +25,7 @@
 
   <ul class="content-list service-status-list">
 {% for status in statuses %}
-    <li class="service-status-item service-status-{{ status.status }}{% if forloop.last %} round-bottom{% endif %}">
+    <li class="service-status-item service-status-{{ status.status }}">
       <span class="service-status-name">{% trans status.name %}</span><br/>
       <span class="service-status-status">{{ status.status|capfirst }}</span>
 {% if status.statusMessage %}
