--- a/molly/media/site/css/smart.css
+++ b/molly/media/site/css/smart.css
@@ -35,6 +35,8 @@ div#index-search input[type="text"] {
     width: 125px;
     font-size:1.2em;
     border: 2px solid #dddddd;
+    border-bottom-left-radius:5px;
+    border-top-left-radius:5px;
     -webkit-border-top-left-radius: 5px;     -moz-border-radius-topleft: 5px;
     -webkit-border-bottom-left-radius: 5px;    -moz-border-radius-bottomleft: 0px;
     -webkit-border-top-right-radius:0;     -moz-border-radius-topright: 0px;
@@ -492,6 +494,7 @@ button, input[type="submit"], input[type="reset"] {
     -moz-box-shadow: 0px 0px 2px rgba(0,0,0,0.5);
     -webkit-border-radius: 5px;
     -webkit-box-shadow: 0px 0px 2px rgba(0,0,0,0.5);
+    border-radius: 5px;
 }
 /* END Input Buttons */
 
