--- a/molly/media/site/css/smart.css
+++ b/molly/media/site/css/smart.css
@@ -495,6 +495,7 @@ button, input[type="submit"], input[type="reset"] {
     -webkit-border-radius: 5px;
     -webkit-box-shadow: 0px 0px 2px rgba(0,0,0,0.5);
     border-radius: 5px;
+    box-shadow: 0px 0px 2px rgba(0,0,0,0.5);
 }
 /* END Input Buttons */
 
@@ -920,6 +921,7 @@ small {
     text-shadow: none !important;
     -webkit-box-shadow: none !important;
     -moz-box-shadow: none !important;
+    box-shadow: none !important;
     height: 20px !important;
     width: 20px !important;
     cursor: pointer !important;
@@ -948,6 +950,7 @@ small {
     border: 0 !important;
     -moz-box-shadow: none !important;
     -webkit-box-shadow: none !important;
+    box-shadow: none !important;
     padding: 0 !important;
     color: #000000 !important;
     text-shadow: none !important;
@@ -1062,6 +1065,7 @@ small {
     text-shadow: none !important;
     -webkit-box-shadow: none !important;
     -moz-box-shadow: none !important;
+    box-shadow: none !important;
     width: 25px !important;
     cursor: pointer !important;
     text-indent:-999em; /* Hack to not show the text on a button when we're showing the image */
