--- a/molly/apps/sakai/templates/sakai/announcement/detail.html
+++ b/molly/apps/sakai/templates/sakai/announcement/detail.html
@@ -1,4 +1,4 @@
-{% extends "sakai/base.html" %}{% load molly_sakai %}
+{% extends "sakai/base.html" %}{% load molly_sakai %}{% load i18n %}
 
 {% block content %}
 
@@ -11,6 +11,17 @@
         <p><small><em>{{ announcement.createdByDisplayName }} at
             {{ announcement.createdOn|from_sakai_timestamp|date:"j M Y \a\t H:m" }}
         </em></small></p>
+    {% if announcement.attachments %}
+        <div class="bubble pad-10">
+            <p>{% blocktrans count announcement.attachments|length as attachments %}This announcement has {{ attachments }} attachment.{% plural %}This announcement has {{ attachments }} attachments.{% endblocktrans %}</p>
+            <ul>
+                {% for attachment in announcement.attachments %}
+                    <li>{{ attachment }}</li>
+                {% endfor %}
+            </ul>
+            <p>{% trans "Please log in to WebLearn to retrieve them." %}</p>
+        </div>
+    {% endif %}
     </div>
 </div>
     
