Change wording slightly

--- a/molly/apps/sakai/templates/sakai/announcement/detail.html
+++ b/molly/apps/sakai/templates/sakai/announcement/detail.html
@@ -19,7 +19,7 @@
                     <li>{{ attachment }}</li>
                 {% endfor %}
             </ul>
-            <p>{% trans "Please log in to WebLearn to retrieve them." %}</p>
+            <p>{% trans "Please use WebLearn on a desktop PC to retrieve them." %}</p>
         </div>
     {% endif %}
     </div>
