--- a/molly/apps/feature_vote/static/feature_vote/css/smart.css
+++ b/molly/apps/feature_vote/static/feature_vote/css/smart.css
@@ -6,6 +6,8 @@ div.vote-box {
     width:35px;
     margin:0 0 5px 5px;
 }
+div.vote-box span {padding:0;}
+
 ul.content-list li.superuser-comment {
 	border: 2px solid #465347;
 	border-width: 2px 0 2px 0;
