--- a/molly/media/site/css/smart.css
+++ b/molly/media/site/css/smart.css
@@ -1,3 +1,7 @@
+/* Molly's root smart.css */
+
+/*** Generic ***/
+
 body {
     background:#bbc4ce url('../../site/images/gradients/backdrop-iphone.png') repeat-x top;
     font-family: "Liberation Sans", sans-serif;
@@ -15,6 +19,61 @@ small {
   font-size:90%;
 }
 
+.invisible {display:none;}
+.center {text-align:center;}
+.clear {clear:both;}
+.inherit-color {color:inherit;}
+.no-border {border:0;}
+
+h2 {
+    text-align:center;
+    padding: 5px 0; margin: 0;
+}
+
+h3 {
+    color:#222;
+    padding: 5px 5px; margin: 0;
+    text-align: center;
+    text-shadow:2px 2px 2px #ccc;
+}
+
+div.bubble {
+    color:#002147;
+    background-color:#ffffff;
+    padding: 0;
+    margin: 10px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+}
+
+div.note {
+    text-align:center;
+    padding: 5px;
+    font-size: 1em;
+}
+div.note a{
+    color: #002B4C;;
+}
+
+.round-top {
+    -webkit-border-top-left-radius: 8px;
+    -webkit-border-top-right-radius: 8px;
+    -moz-border-radius-topleft: 8px;
+    -moz-border-radius-topright: 8px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+div.pad-10{padding: 10px;}
+div.pad-5 {padding:5px;}
+
+div.no-round-bottom, ul.no-round-bottom,li.no-round-bottom,
+table.no-round-bottom > *:last-child > tr:last-child > *:last-child,
+table.no-round-bottom > *:last-child > tr:last-child > *:first-child {
+    -webkit-border-bottom-left-radius: 0px !important;   -moz-border-radius-bottomleft: 0px !important;     border-bottom-left-radius: 0px !important;
+    -webkit-border-bottom-right-radius: 0px !important;  -moz-border-radius-bottomright: 0px !important;    border-bottom-right-radius: 0px !important;
+}
+/* End Generic */
 
 /* Breadcrumb Trail Styles */
 div#bc-header {
@@ -329,66 +388,6 @@ button, input[type="submit"], input[type="reset"] {
     box-shadow: 0px 0px 2px rgba(0,0,0,0.5);
 }
 /* END Input Buttons */
-
-
-/*** Generic ***/
-.invisible {display:none;}
-.center {text-align:center;}
-.clear {clear:both;}
-.inherit-color {color:inherit;}
-.no-border {border:0;}
-
-h2 {
-    text-align:center;
-    padding: 5px 0; margin: 0;
-}
-
-h3 {
-    color:#222;
-    padding: 5px 5px; margin: 0;
-    text-align: center;
-    text-shadow:2px 2px 2px #ccc;
-}
-
-div.bubble {
-    color:#002147;
-    background-color:#ffffff;
-    padding: 0;
-    margin: 10px;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    border-radius: 8px;
-}
-
-div.note {
-    text-align:center;
-    padding: 5px;
-    font-size: 1em;
-}
-div.note a{
-    color: #002B4C;;
-}
-
-.round-top {
-    -webkit-border-top-left-radius: 8px;
-    -webkit-border-top-right-radius: 8px;
-    -moz-border-radius-topleft: 8px;
-    -moz-border-radius-topright: 8px;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-}
-div.pad-10{padding: 10px;}
-div.pad-5 {padding:5px;}
-
-div.no-round-bottom, ul.no-round-bottom,li.no-round-bottom,
-table.no-round-bottom > *:last-child > tr:last-child > *:last-child,
-table.no-round-bottom > *:last-child > tr:last-child > *:first-child {
-    -webkit-border-bottom-left-radius: 0px !important;   -moz-border-radius-bottomleft: 0px !important;     border-bottom-left-radius: 0px !important;
-    -webkit-border-bottom-right-radius: 0px !important;  -moz-border-radius-bottomright: 0px !important;    border-bottom-right-radius: 0px !important;
-}
-
-/* End Generic */
-
 
 /* Form sections */
 div.form-section {
