Show full list on installs with more than 2 languages

--- a/molly/apps/home/templates/home/index.html
+++ b/molly/apps/home/templates/home/index.html
@@ -146,6 +146,8 @@
 
     {% block below-about %}
     {% endblock below-about %}
-    {% include "i18n/language_selector.html" %}
+    {% if LANGUAGES|length > 1 %}
+        {% include "i18n/language_selector.html" %}
+    {% endif %}
 
 {% endblock content %}
