Fix up nearby queries on entities without location

--- a/molly/apps/places/templates/places/entity_without_location.html
+++ b/molly/apps/places/templates/places/entity_without_location.html
@@ -7,7 +7,7 @@
 
 <div class="section">
 <div class="header">
-  <h2>{{ entity_type.verbose_name_plural }} near {{ entity.title }}</h2>
+  <h2>Things near {{ entity.title }}</h2>
   <div class="note"><div class="bubble pad-10">
     Unfortunately, we do not have a location for this object, and so cannot tell you what is near it.
   </div>
