--- a/molly/templates/base.html
+++ b/molly/templates/base.html
@@ -179,17 +179,17 @@
                 {% endif %}
                 
                 {% if "feature_vote"|app_is_loaded or "feature-suggestions"|app_is_loaded %}
-                  <div {% if LANGUAGES|length != 2 %}class="full-width"{% endif %}>
+                  <div class="{% if LANGUAGES|length != 2 %}full-width{% else %}half-width{% endif %}">
                     <a href="{% url feature_vote:index %}">{% trans "Suggest a feature" %}</a></div>
                 {% endif %}
                 {# If there are only two languages to switch between, show the switch here #}
                 {% if LANGUAGES|length == 2 %}
-                    <div>
+                    <div class="half-width">
                     {% for language_code, language_name in LANGUAGES %}
                     {% if language_code != LANGUAGE_CODE %}
                     <form action="{% url set-language %}" method="post" class="has-ajax-handler">
-                        {% csrf_token %}
-                        <a><button type="submit" name="language" value="{{ language_code }}">
+                        {% csrf_token %}<a>
+                        <button type="submit" name="language" value="{{ language_code }}">
                         {{ language_name }}
                         </button></a>
                     </form>
